# paygen

./: .gitignore  LICENSE  PHASE4_COMPLETE.md  PHASE4_USAGE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  config.yaml  debug_css.py  demo_tui.py  generate_examples.py  paygen.py  plan.md  project.md  ps-features.yaml  ps-obfuscation.yaml  pyproject.toml  requirements.txt  run.sh  shell.nix  shellcodes.yaml  test_aes_comprehensive.py  test_param_screen.py  test_phase4_integration.py  test_preprocessing.py  test_recipe.py  test_recipes.py  test_validation.py
.direnv/: nix-profile-25.05-6dvf3k09y1gs9h4s  nix-profile-25.05-6dvf3k09y1gs9h4s.rc
docs/: AI_RECIPE_GUIDE.md  DEVELOPMENT.md
payloads/process_injection/: aes_injector.cs  process_injection.cs  xor_injector.cs
preprocessors/: aes_encrypt.py  base64_encode.py  caesar_cipher.py  compress.py  format_csharp.py  hex_to_bytes.py  xor_encrypt.py
recipes/: aes_process_injection_example.yaml  basic_msfvenom_payload.yaml  shellcode_example.yaml  shellcode_option_example.yaml  xor_shellcode_injection_example.yaml
recipes/defense_evasion/: process_injection_csharp.yaml  process_injection_powershell.yaml
recipes/execution/: msfvenom_reverse_shell.yaml
src/: __init__.py  main.py  web_main.py
src/core/: __init__.py  command_executor.py  compiler.py  config.py  history.py  payload_builder.py  preprocessor.py  recipe_loader.py  recipe_manager.py  shellcode_loader.py  validator.py
src/tui/: __init__.py  app.py  build_progress_popup.py  build_results.py  category_panel.py  code_panel.py  colors.py  help_screen.py  history_popup.py  menu.py  param_config_panel.py  param_config_screen.py  parameter_input.py  recipe_detail.py  recipe_panel.py  recipe_panel_new.py
src/utils/: __init__.py  crypto.py  templates.py
src/web/: __init__.py  app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
templates/amsi_bypasses/: AmsiInitialize.ps1  README.md
templates/process_injection/: xor_injector.cs  xor_remote_inject.cs
tests/: __init__.py  test_applocker_bypass.py  test_args_detection.py  test_code_vs_command.py  test_command_and_code.py  test_conditional_blocks.py  test_config.py  test_dll_extraction.py  test_error_reporting.py  test_integration_conditional.py  test_recipes.py  test_validation.py
