[project]
name = "paygen"
version = "2.0.0"
description = "Web-based framework for generating and customizing malicious payloads"
authors = [{name = "Hailst0rm1"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "pycryptodome>=3.19.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.scripts]
paygen = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.core", "src.utils", "src.web"]
